# etp-hermes

./: .gitignore  AGENTS.md  CLAUDE.md  FEEDS.md  HONCHO.md  MEMORY_TODO.md  MLOPS_PLATFORMS.md  Makefile  README.md  pyproject.toml  requirements-hermes.in  requirements-hermes.txt
.github/workflows/: ab-experiment.yml  evals.yml  hermes-sync.yml  langfuse-usage.yml  pages.yml  portfolio-discovery.yml
data/: companies.json  feeds.json  sectors.json
data/langfuse-usage/: 2026-05.json  2026-06.json
data/metrics/: 1cool.jsonl  8verlink.jsonl  active-silvers.jsonl  actly.jsonl  admitpath.jsonl  ailytics.jsonl  aipath.jsonl  aisee.jsonl  aiwater.jsonl  ajentik-ai.jsonl  akar.jsonl  akesis-biologics.jsonl  akro.jsonl  aleph.jsonl  alpha-electrics.jsonl  (+172 more)
hermes/: SOUL.md  companies.txt  config.yaml
prompts/: agent_supplement.md  infographics.md  ingest.md  news.md  synthesis.md
scripts/: ab_arms.py  ab_backfill.py  ab_compare.py  ab_judge.py  ab_llm.py  ab_stats.py  bootstrap-hermes.sh  collect-candidates.py  collect_metrics.py  derive_country.py  detect-dead-feeds.py  discover_portfolio.py  filter_exclusions.py  filter_seen_updates.py  jina-reader.py  jina_fallback.py  langfuse_usage.py  merge_portfolio_entries.py  preflight-feeds.py  render_metrics.py  sanitize-seen-urls.py  select_gapfill_queue.py  slice_companies.py  sync-hermes-local.sh  update_gapfill_state.py
signals/: agent-queue-state.json  agent-queue.txt  feed-health.md  langfuse-usage.md  seen-urls.txt
site/: package.json  pnpm-lock.yaml  pnpm-workspace.yaml  turbo.json
tests/: _slug.py  conftest.py
(+241 files in other folders)
